--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
-  box-sizing: border-box;
+box-sizing: border-box;
+
 }
 
 :root {
@@ -10,6 +11,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: green;
+  
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -76,4 +78,6 @@ button {
   border-radius: 10px;
   background-color: whitesmoke;
   border: 3px solid transparent;
+  padding: 1em 5em;
+
 }
